--- a/apps/account/template/personal_info.html
+++ b/apps/account/template/personal_info.html
@@ -56,7 +56,7 @@
                         <label>{{userHash}}</label>
                         <input
                                 type="text"
-                                value="{{userHashValue}}"
+                                value="{{user.getHash()}}"
                         >
                     </div>
                 </div>
