finalized installation process

--- a/apps/install/template/install.twig
+++ b/apps/install/template/install.twig
@@ -1,6 +1,7 @@
 <div class="ui container" id="install__instance__container">
     <div class="ui text container">
         <h1>{{ installationHeader }}</h1>
+        <h4>{{ installationDescription }}</h4>
         <span>{{ installInstruction }}</span>
 
         {% for app in appsToInstall %}
