--- a/template/app/content.twig
+++ b/template/app/content.twig
@@ -1,27 +1,28 @@
-<div class="ui two column doubling stackable grid" id="main-container">
-    {% if hasAppNavigation == true %}
+{% if hasActionBars == true %}
+    <div class="container-fluid" style="background: red; height: 50px">
+        {{ actionBar|raw }}
+    </div>
+{% endif %}
+{#<div class="ui two column doubling stackable grid" id="main-container">#}
+{#    {% if hasAppNavigation == true %}#}
 
-        <div class="three wide column" id="app-navigation">
-            {{ appNavigation|raw }}
-        </div>
+{#        <div class="three wide column" id="app-navigation">#}
+{#            {{ appNavigation|raw }}#}
+{#        </div>#}
 
-        <div class="thirteen wide column">
-            {% if hasBreadcrumbs == true %}
-                <div id="breadcrumb__wrapper">
-                    {{ breadcrumbs|raw }}
-                </div>
-            {% endif %}
-            {% if hasActionBars == true %}
-                <div class="ui basic segment action-bar">
-                    {{ actionBar|raw }}
-                </div>
-            {% endif %}
+{#        <div class="thirteen wide column">#}
+{#            {% if hasBreadcrumbs == true %}#}
+{#                <div id="breadcrumb__wrapper">#}
+{#                    {{ breadcrumbs|raw }}#}
+{#                </div>#}
+{#            {% endif %}#}
 
 
-            {{ appContent|raw }}
-        </div>
 
-    {% else %}
-        <div class="sixteen wide column">{{ appContent|raw }}</div>
-    {% endif %}
-</div>
+{#            {{ appContent|raw }}#}
+{#        </div>#}
+
+{#    {% else %}#}
+{#        <div class="sixteen wide column">{{ appContent|raw }}</div>#}
+{#    {% endif %}#}
+{#</div>#}
