--- a/template/app/actionbar.twig
+++ b/template/app/actionbar.twig
@@ -1,14 +1,16 @@
-<div class="container">
+<div class="container action-bar-inner">
     <div class="btn-group">
+
 
         <button
                 type="button"
-                class="btn dropdown-toggle action-bar-button"
+                class="btn dropdown-toggle btn-primary"
                 data-toggle="dropdown"
                 aria-haspopup="true"
                 id="{{ buttonId }}"
         >
-            <i class="fas {{ iconClass }}  fa-lg"></i>
+            <i class="fa fa-fw fa-plus-circle"></i>
+            Create
         </button>
 
 
