--- a/template/app/content.twig
+++ b/template/app/content.twig
@@ -4,7 +4,8 @@
     </div>
 {% endif %}
 <div class="row" id="content">
-    <div class="w-25">
+    {# TODO hasAppNavigation #}
+    <div class="w-25" id="content-twentyfive">
         {{ appNavigation|raw }}
     </div>
     <div class="w-75">
