--- a/template/app/content.twig
+++ b/template/app/content.twig
@@ -1,32 +1,22 @@
-{% if hasActionBars == true %}
-    <div class="container-fluid action-bar">
-        {{ actionBar|raw }}
-    </div>
-{% endif %}
-<div class="row" id="content">
+<div id="content">
     {# TODO hasAppNavigation #}
-    <div class="w-25" id="content-twentyfive">
-        {{ appNavigation|raw }}
-    </div>
-    <div class="w-75">
-{#        {% if hasBreadcrumbs == true %}#}
-{#            <div id="breadcrumb__wrapper">#}
-{#                {{ breadcrumbs|raw }}#}
-{#            </div>#}
-{#        {% endif %}#}
-{#        {{ appContent|raw }}#}
-    </div>
+    {{ appNavigation|raw }}
+    {#        {% if hasBreadcrumbs == true %}#}
+    {#            <div id="breadcrumb__wrapper">#}
+    {#                {{ breadcrumbs|raw }}#}
+    {#            </div>#}
+    {#        {% endif %}#}
+    {#        {{ appContent|raw }}#}
+    {#</div>#}
 
-{#</div>#}
-
-{#<div class="ui two column doubling stackable grid" id="main-container">#}
-{#    {% if hasAppNavigation == true %}#}
-{#        <div class="three wide column" id="app-navigation">#}
-{#            {{ appNavigation|raw }}#}
-{#        </div>#}
-{#        <div class="thirteen wide column">#}
-{#        </div>#}
-{#    {% else %}#}
-{#        <div class="sixteen wide column">{{ appContent|raw }}</div>#}
-{#    {% endif %}#}
-{#</div>#}
+    {#<div class="ui two column doubling stackable grid" id="main-container">#}
+    {#    {% if hasAppNavigation == true %}#}
+    {#        <div class="three wide column" id="app-navigation">#}
+    {#            {{ appNavigation|raw }}#}
+    {#        </div>#}
+    {#        <div class="thirteen wide column">#}
+    {#        </div>#}
+    {#    {% else %}#}
+    {#        <div class="sixteen wide column">{{ appContent|raw }}</div>#}
+    {#    {% endif %}#}
+    {#</div>#}
