--- a/lib/scss/style.scss
+++ b/lib/scss/style.scss
@@ -1,33 +1,39 @@
+// bootsrap stuff
 $body-bg: #FFF;
 $body-color: #FFF;
 
-$theme-color: #269dff;
-$theme-color-inverted: #F2F2F2;
-$theme-color-dark1: #0070cc;
-$text-color: #000;
-$text-color-white: #FFF;
+$keestash-theme-color: #269dff;
+$keestash-theme-color-inverted: #F2F2F2;
+$keestash-theme-color-dark1: #0070cc;
+$keestash-text-color: #000;
+$keestash-text-color-white: #FFF;
 
-$avatar-size: 30px;
+$keestash-avatar-size: 30px;
+$grey: #9e9e9e;
 
 @import "../../vendor/twitter/bootstrap/scss/bootstrap.scss";
 
 html {
-  color: $text-color-white;
+  color: $keestash-text-color-white;
 }
 
 body {
-  color: $text-color;
+  color: $keestash-text-color;
+
+  .grey-text {
+    color: $grey;
+  }
 }
 
 .navbar {
   padding: .5rem 1rem !important;
-  background-color: $theme-color;
-  color: $text-color-white;
+  background-color: $keestash-theme-color;
+  color: $keestash-text-color-white;
 }
 
 .avatar {
   vertical-align: middle;
-  height: $avatar-size;
+  height: $keestash-avatar-size;
   border-radius: 50%;
 }
 
@@ -41,7 +47,7 @@ body {
   height: 100%;
 
   #app-navigation {
-    background-color: $theme-color-inverted;
+    background-color: $keestash-theme-color-inverted;
     height: 100%;
     width: 260px;
     position: absolute;
@@ -68,6 +74,9 @@ body {
           padding-bottom: 0.3rem;
 
           .p-3 {
+            padding-left: 0 !important;
+            padding-right: 0 !important;
+
             .btn-group {
               width: 100%;
             }
@@ -91,6 +100,10 @@ body {
         color: black;
         text-align: inherit;
         text-decoration: none;
+      }
+
+      .entry-icon{
+        margin-right: 1rem;
       }
 
       .list-group-item-action.active,
@@ -119,6 +132,6 @@ hr {
 .btn.btn-primary:active,
 .btn.btn-primary:hover,
 .btn.btn-primary:focus {
-  background: $theme-color;
-  border: $theme-color-dark1;
+  background: $keestash-theme-color;
+  border: $keestash-theme-color-dark1;
 }
