--- a/apps/general_api/template/frontend/long.twig
+++ b/apps/general_api/template/frontend/long.twig
@@ -1,9 +1,20 @@
-<div class="ui long test modal">
-    <div class="header">{{ header }}</div>
-    <div class="description">{{ description }}</div>
-    <div class="actions">
-        <div class="ui primary approve button">{{ buttonText }}
-            <i class="right chevron icon"></i>
+<div class="modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+     aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLongTitle">{{ header }}</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                {{ description|raw }}
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">{{ buttonText }}</button>
+            </div>
         </div>
     </div>
 </div>
