--- a/apps/general_api/template/frontend/long.twig
+++ b/apps/general_api/template/frontend/long.twig
@@ -9,10 +9,11 @@
                 </button>
             </div>
             <div class="modal-body">
+                <div id="response__text" class="alert d-none" role="alert"></div>
                 {{ description|raw }}
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">{{ negativeButtonText }}</button>
                 <button type="button" class="btn btn-primary">{{ buttonText }}</button>
             </div>
         </div>
