--- a/lib/scss/style.scss
+++ b/lib/scss/style.scss
@@ -5,6 +5,7 @@ $body-color: #FFF;
 $keestash-theme-color: #269dff;
 $keestash-theme-color-inverted: #F2F2F2;
 $keestash-theme-color-dark1: #0070cc;
+$keestash-theme-color-black: #3B3939;
 $keestash-text-color: #000;
 $keestash-text-color-white: #FFF;
 
@@ -102,7 +103,7 @@ body {
         text-decoration: none;
       }
 
-      .entry-icon{
+      .entry-icon {
         margin-right: 1rem;
       }
 
@@ -134,4 +135,11 @@ hr {
 .btn.btn-primary:focus {
   background: $keestash-theme-color;
   border: $keestash-theme-color-dark1;
+}
+
+.btn.btn-secondary,
+.btn.btn-secondary:active,
+.btn.btn-secondary:hover,
+.btn.btn-secondary:focus {
+  background: $keestash-theme-color-black;
 }
